# noise-filters

./: .gitignore  CMakeLists.txt  err.txt  main.cpp  makefile  mytimer.cpp  simple-pass-filter.cpp  stdsfmllib.cpp  stdsfmllib.h  tmp.cpp
dependencies/: gaussian_distribution.cpp  vectorprint.cpp
dependencies/include/: gaussian_distribution.cpp  mytimer.cpp  vectorprint.cpp
dependencies/lib/cmake/SFML/: SFMLSharedTargets.cmake  SFMLStaticTargets.cmake
include/: filters.h  filters.hpp  misc.hpp  mysf.h  mysf.hpp  noisefilters.hpp  noisemodels.hpp
src/: CMakeLists.txt  addErlangNoise.cpp  filters.cpp  getCoreCount.cpp  grayToMono.cpp  mean.cpp  mysf.cpp  noiseModels.cpp  rgbToGray.cpp  variance.cpp
src/misc/: CMakeLists.txt  getCoreCount.cpp
src/mysf/: CMakeLists.txt  grayToMono.cpp  mean.cpp  rgbToGray.cpp  variance.cpp
src/noisefilters/: CMakeLists.txt  apply_filter.cpp  filters.cpp
src/noisemodels/: CMakeLists.txt  addGaussianNoise.cpp  addNoise.cpp  addUniformNoise.cpp  noiseModels.cpp
